[gd_scene load_steps=3 format=2]

[ext_resource path="res://imports/shotgun.png" type="Texture" id=1]
[ext_resource path="res://Weapons/shotgun.gd" type="Script" id=2]

[node name="shortgun" type="Node2D"]
script = ExtResource( 2 )
fireCD = 0.15

[node name="GunSprite" type="Sprite" parent="."]
position = Vector2( 3, -1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="GunSprite"]
position = Vector2( 16, 0 )

[node name="ShakeTimer" type="Timer" parent="."]
wait_time = 0.07

[node name="fireCD" type="Timer" parent="."]
one_shot = true

[node name="reloadCD" type="Timer" parent="."]
one_shot = true

[node name="readyTimer" type="Timer" parent="."]
wait_time = 0.001
one_shot = true

[connection signal="timeout" from="ShakeTimer" to="." method="_on_ShakeTimer_timeout"]
[connection signal="timeout" from="fireCD" to="." method="_on_fireCD_timeout"]
[connection signal="timeout" from="reloadCD" to="." method="_on_reloadCD_timeout"]
[connection signal="timeout" from="readyTimer" to="." method="_on_readyTimer_timeout"]
